2008-05-15	Joel Sherrill <joel.sherrill@OARcorp.com>

	* aclocal/bsp-bootcards-handles-ram-allocation.m4: New file.

2008-05-15	Joel Sherrill <joel.sherrill@OARcorp.com>

	* wrapup/Makefile.am: Many BSPs do not include any .rel files now so do
	not fail if there are none.

2008-05-15	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* libchip/i2c/spi-flash-m25p40.c, libchip/i2c/spi-flash-m25p40.h,
	* libchip/i2c/spi-fram-fm25l256.c, libchip/i2c/spi-fram-fm25l256.h,
	* libchip/i2c/spi-memdrv.c, libchip/i2c/spi-memdrv.h,
	* libchip/Makefile.am:
	derived a generic spi memory driver from spi-flash-m25p40, 
	added descriptor for fram fm25l256

2008-05-07	Till Straumann <strauman@slac.stanford.edu>

	PR 649/bsps
	* libchip/ide/ata.c: Give up if the interface does not become ready.

2008-04-25	Joel Sherrill <joel.sherrill@OARcorp.com>

	Moved to cpukit.
	* nfsclient/.cvsignore, nfsclient/ChangeLog.slac, nfsclient/LICENSE,
	nfsclient/Makefile.am, nfsclient/README, nfsclient/preinstall.am,
	nfsclient/rfc1094.txt, nfsclient/rtems-filesystem-patch,
	nfsclient/proto/mount_prot.h, nfsclient/proto/mount_prot.x,
	nfsclient/proto/mount_prot_xdr.c, nfsclient/proto/nfs_prot.h,
	nfsclient/proto/nfs_prot.x, nfsclient/proto/nfs_prot_xdr.c,
	nfsclient/src/cexphelp.c, nfsclient/src/dirutils.c,
	nfsclient/src/librtemsNfs.h, nfsclient/src/nfs.c,
	nfsclient/src/nfs.modini.c, nfsclient/src/nfsTest.c,
	nfsclient/src/rpcio.c, nfsclient/src/rpcio.h,
	nfsclient/src/rpcio.modini.c, nfsclient/src/sock_mbuf.c,
	nfsclient/src/xdr_mbuf.c: Removed.

2008-02-26	Joel Sherrill <joel.sherrill@OARcorp.com>

	* configure.ac: Stop building nfsclient here and build it in CPUKIT.

2008-01-05	Chris Johns <chrisj@rtems.org>

	* libchip/flash/am29lv160.c: Update the blank check error message
	to say there is an error.
	
2007-12-22	Chris Johns <chrisj@rtems.org>

	* nfsclient/src/nfs.c, nfsclient/src/rpcio.c: Adjust the length of
	the hello message. Just one line but still a little too long.
	